VDR Plugin 'elvis' Revision History
------------------------------------

2010-08-13: Version 0.0.1

- Initial revision.

2010-08-20: Version 0.0.2

- Added support for Saunavisio.
- Moved all setup options into separate 'elvis.conf' file.
- Fixed localization in setup inputs.